# my_autoware_extension

launch/20250130/: CMakeLists.txt  package.xml
launch/20250130/launch/: 20250130.launch.xml
launch/select_launch/: CMakeLists.txt  package.xml
launch/select_launch/launch/: distance_selective.launch.xml
map/polygon_manager/: CMakeLists.txt  package.xml
map/polygon_manager/src/: polygon_manager_node.cpp
perception/base_fusion/: CMakeLists.txt  package.xml
perception/base_fusion/src/: base_fusion_node.cpp
perception/distance_selective_rsu/: CMakeLists.txt  package.xml
perception/distance_selective_rsu/src/: distance_selective_rsu_node.cpp
perception/my_autoware_centerpoint/: CHANGELOG.rst  CMakeLists.txt  README.md  package.xml
perception/my_autoware_centerpoint/config/: centerpoint.param.yaml  centerpoint_short_range_ml_package.param.yaml
perception/my_autoware_centerpoint/include/autoware/lidar_centerpoint/: centerpoint_config.hpp
perception/my_autoware_centerpoint/include/autoware/lidar_centerpoint/postprocess/: postprocess_kernel.hpp
perception/my_autoware_centerpoint/launch/: lidar_centerpoint.launch.xml
perception/my_autoware_centerpoint/lib/postprocess/: postprocess_kernel.cu
perception/my_autoware_centerpoint/lib/preprocess/: pointcloud_densification.cpp
perception/my_autoware_centerpoint/schema/: centerpoint.schemal.json  centerpoint_ml_package.schema.json
perception/my_autoware_centerpoint/src/: node.cpp
perception/object_transformer_cpp/: CMakeLists.txt  package.xml
perception/object_transformer_cpp/src/: object_transformer_node.cpp
(+1 files in other folders)
